element hover styling & prevent footer space overflow in firefox

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,10 @@ a {
   text-decoration: none;
 }
 
+a:hover, button:hover {
+  cursor: pointer;
+}
+
 .content-margin {
   width: $container-width;
   margin: 0 auto;
@@ -32,11 +36,15 @@ p {
 .btn-light {
   border: none;
   border-radius: 5px;
-  background-color: $primary-white;
+  background: $primary-white;
   color: $secondary-dark-grey;
   height: 56px;
   width: 152px;
   font-size: 16px;
   font-weight: 500;
   text-transform: uppercase;
+
+  &:hover {
+    background: $secondary-light-peach;
+  }
 }
